# cricket-batting-analysis

./: .env.example  .gitignore  NOTES.md  PROMPTS.md  README.md  ROADMAP.md  docker-compose.yml  start.sh  stop.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  library.py  logging_config.py  main.py  models.py
backend/app/api/: routes.py  video_routes.py
backend/app/pipeline/: chat_agent.py  chat_summary.py  confidence.py  ingest.py  llm_client.py  metrics.py  normalize.py  pose.py  render.py  report.py  segmentation.py
backend/app/worker/: settings.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPanel.tsx  LibraryView.tsx  ProcessingView.tsx  ResultsView.tsx  UploadView.tsx  VideoDetailView.tsx
scripts/: start-backend.sh  start-frontend.sh  start-redis.sh  start-worker.sh  start.sh  stop.sh
tests/: test_e2e.py
